syntax = "proto3";

package pb;

/**
 * 传输任务状态流转图及说明
 * 
 *       +----------------+
 *       | UNSPECIFIED(0) |  初始状态：任务创建时的默认状态
 *       +----------------+
 *              |
 *              v
 *       +----------------+  失败   +---------------+
 *    +->|   CODING(1)    |------->|   FAILED(6)   |
 *    |  +----------------+        +---------------+
 *    |        |                          |
 *    |        | 成功                     |
 *    |        v                          |
 *    取消      |      +----------------+   失败        | 恢复
 *    +--------+      |  PENDING(2)    |------------->|
 *    |        |      +----------------+              |
 *    |        |            |                         |
 *    |        |            | 开始                    |
 *    |        |            v                         |
 *    |  +----------------+ 失败  +---------------+   |
 *    |  | TRANSFERRING(3)|------>|   FAILED(6)   |<--+
 *    |  +----------------+       +---------------+
 *    |        |     ^                    |
 *    |        |     |                    |
 *    | 暂停   |     | 继续                |
 *    |        |     |                    |
 *    |        v     |                    |
 *    |  +----------------+               |
 *    |  |   PAUSED(4)    |               |
 *    |  +----------------+               |
 *    |        |                          |
 *    |        | 重试失败                  v
 *    |        |            +----------------+
 *    +------->|            | EXCEPTION(8)   |
 *    |                     +----------------+
 *    |                            ^
 *    |                            |
 *    +----------------------------+
 *    取消
 * 
 * 状态流转说明：
 * 1. UNSPECIFIED -> CODING
 *    - 任务初始化后，开始进行编码或解码处理
 *    - 可能的场景：压缩、加密、格式转换等
 * 
 * 2. CODING -> PENDING/FAILED
 *    - 成功：进入 PENDING 状态，等待开始传输
 *    - 失败：进入 FAILED 状态，可尝试恢复重试
 * 
 * 3. PENDING -> TRANSFERRING
 *    - 系统调度资源后开始实际的传输操作
 *    - 可能受限于：网络带宽、系统负载、优先级等
 * 
 * 4. TRANSFERRING -> PAUSED/COMPLETED/FAILED
 *    - 暂停：用户手动暂停或系统自动暂停（如网络不稳定）
 *    - 完成：传输成功结束
 *    - 失败：传输过程出错（网络断开、存储空间不足等）
 * 
 * 5. PAUSED -> TRANSFERRING
 *    - 通过继续操作恢复传输
 *    - 如果恢复失败，可能进入 FAILED 状态
 * 
 * 6. FAILED -> TRANSFERRING/EXCEPTION
 *    - 可以尝试恢复重试
 *    - 如果重试仍然失败，进入 EXCEPTION 状态
 * 
 * 7. 任意状态 -> CANCELED
 *    - 用户可以在任意状态下取消任务
 *    - 取消是不可逆操作，任务终止
 * 
 * 8. EXCEPTION 状态
 *    - 表示任务发生严重错误，无法继续执行
 *    - 是终态，需要人工介入处理
 *    - 可能原因：文件损坏、系统错误等
 */

// TransferStatus 表示传输任务的通用状态
enum TransferStatus {
    // 未指定状态，表示任务状态未初始化或未知
    TRANSFER_STATUS_UNSPECIFIED = 0;
    // 编解码中，表示文件正在进行编码或解码处理
    TRANSFER_STATUS_CODING = 1;
    // 待处理，任务已创建但尚未开始执行
    TRANSFER_STATUS_PENDING = 2;
    // 传输中，任务正在执行数据传输操作
    TRANSFER_STATUS_TRANSFERRING = 3;
    // 已暂停，任务已被暂停，可通过继续操作恢复
    TRANSFER_STATUS_PAUSED = 4;
    // 已完成，任务已成功完成所有操作
    TRANSFER_STATUS_COMPLETED = 5;
    // 失败，任务由于各种原因未能成功完成
    TRANSFER_STATUS_FAILED = 6;
    // 已取消，任务被主动取消
    TRANSFER_STATUS_CANCELED = 7;
    // 异常，表示传输过程中检测到严重问题
    TRANSFER_STATUS_EXCEPTION = 8;
}

// SegmentStatus 表示文件片段的传输状态


/**
 * 片段状态流转说明：
 * 
 *    +----------------+
 *    | UNSPECIFIED(0) |
 *    +----------------+
 *           |
 *           v
 *    +----------------+
 *    |  PENDING(1)    |
 *    +----------------+
 *           |
 *           v
 *    +----------------+
 *    |TRANSFERRING(2) |<---------+
 *    +----------------+          |
 *           |                    |
 *           |                    |
 *     +-----+-----+              |
 *     v           v              |
 * +--------+  +---------+        |
 * |COMP(3) |  |FAILED(4)|-------+
 * +--------+  +---------+  重试
 * 
 * 状态流转说明：
 * 1. UNSPECIFIED -> PENDING
 *    - 片段初始化后进入待处理状态
 * 
 * 2. PENDING -> TRANSFERRING
 *    - 开始传输数据
 * 
 * 3. TRANSFERRING -> COMPLETED
 *    - 传输成功完成并通过校验
 * 
 * 4. TRANSFERRING -> FAILED
 *    - 传输过程中发生错误
 * 
 * 5. FAILED -> TRANSFERRING
 *    - 失败后可以重试传输
 */

 enum SegmentStatus {
    // 未指定状态，表示片段状态未初始化或未知
    SEGMENT_STATUS_UNSPECIFIED = 0;
    // 待处理，文件片段已准备好但尚未开始传输
    // - 上传：文件片段已完成预处理，等待上传
    // - 下载：文件片段元信息已获取，等待下载
    // - 传输：文件片段已完成预处理，等待传输
    SEGMENT_STATUS_PENDING = 1;
    // 传输中，文件片段正在传输过程中
    // - 上传：数据正在上传到目标存储
    // - 下载：数据正在从源存储下载
    // - 传输：数据正在传输到目标节点
    SEGMENT_STATUS_TRANSFERRING = 2;
    // 已完成，文件片段传输成功并通过完整性校验
    // - 校验内容：数据完整性、大小、哈希值等
    SEGMENT_STATUS_COMPLETED = 3;
    // 失败，文件片段传输失败
    // 可能的原因：
    // - 网络问题：连接断开、超时
    // - 存储问题：空间不足、权限错误
    // - 校验失败：数据损坏、大小不匹配
    SEGMENT_STATUS_FAILED = 4;
}